# MLOps-Default-prediction

./: .env.example  .gitignore  ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_CHANGES_DETAILED.md  IMPLEMENTATION_SUMMARY.md  Loan_Default_Prediction.ipynb  MONGODB_MIGRATION.md  Makefile  PR_SUMMARY.md  QUICKSTART.md  README.md  SUMMARY.md  VERIFICATION_CHECKLIST.md  WORKFLOW.md  docker-compose.yml  examples.py  generate_raw_data.py  pipeline_examples.py  pyproject.toml  register_model.py  register_model_fixed.py  requirements.txt  setup.sh  test_mongodb.py  test_workflow.sh  train.py
.devcontainer/: devcontainer.json
airflow/: init_airflow.sh
airflow/dags/: data_collection_dag.py  model_training_dag.py  model_validation_deployment_dag.py
config/: init.sql  settings.py
docker/: Dockerfile.airflow  Dockerfile.app
docs/: MODEL_EVALUATION_DAG_FLOW.md
scripts/: generate_sample_data.py
src/api/: main.py
src/data/: __init__.py  corp_default_modeling_f.py  data_augmentation_generator.py  data_gen_loader_processor.py  data_loader.py  database.py  distribution_model.pkl  preprocessing.py
src/database/: __init__.py  mongodb.py
src/kafka/: __init__.py  consumer.py  producer.py
src/models/: __init__.py  augmentation.py  evaluation.py  finetuned_model_f.pth  network.py  pretrained_model_f.pth  (+3 more)
tests/: conftest.py  test_basic.py  test_data_gen_loader_processor.py  test_evaluation_dag.py  test_kafka.py  test_models.py  test_mongodb.py  validate_dag.py
(+9 files in other folders)
